fix: fix random blob overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -602,6 +602,62 @@ html {
   top: 425px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.top-\[346PX\] {
+  top: 346PX;
+}
+
+.left-\[80px\] {
+  left: 80px;
+}
+
+.-right-\[80px\] {
+  right: -80px;
+}
+
+.-right-\[100px\] {
+  right: -100px;
+}
+
+.-right-\[120px\] {
+  right: -120px;
+}
+
+.-right-\[150px\] {
+  right: -150px;
+}
+
+.top-\[350PX\] {
+  top: 350PX;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.top-\[500px\] {
+  top: 500px;
+}
+
+.top-\[400px\] {
+  top: 400px;
+}
+
+.top-\[420px\] {
+  top: 420px;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -654,6 +710,10 @@ html {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[564px\] {
+  height: 564px;
 }
 
 .w-\[150px\] {
@@ -813,6 +873,10 @@ html {
   gap: 50px;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -849,6 +913,16 @@ html {
 
 .bg-white\/80 {
   background-color: rgb(255 255 255 / 0.8);
+}
+
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
+.bg-red-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 
 .fill-main-blue {
@@ -1028,6 +1102,42 @@ html {
 
   .sm\:top-\[312px\] {
     top: 312px;
+  }
+
+  .sm\:top-\[400px\] {
+    top: 400px;
+  }
+
+  .sm\:top-\[350px\] {
+    top: 350px;
+  }
+
+  .sm\:-right-\[10px\] {
+    right: -10px;
+  }
+
+  .sm\:-right-\[100px\] {
+    right: -100px;
+  }
+
+  .sm\:-right-\[140px\] {
+    right: -140px;
+  }
+
+  .sm\:-right-\[150px\] {
+    right: -150px;
+  }
+
+  .sm\:-right-\[200px\] {
+    right: -200px;
+  }
+
+  .sm\:top-\[300px\] {
+    top: 300px;
+  }
+
+  .sm\:top-\[320px\] {
+    top: 320px;
   }
 
   .sm\:hidden {
